[package]
name = "chunk-streamer"
version = "0.3.0"
edition = "2024"
authors = ["Paul Green"]
description = "Chunk Streamer library streams Autonomi data as a futures::stream"
readme = "README.md"
repository = "https://github.com/traktion/chunk-streamer"
license = "GPL-3.0"
keywords = ["autonomi"]
categories = ["network-programming"]
exclude = [".github", ".gitignore", "target/"]

[dependencies]
autonomi = "0.6.0"
bytes = "1.10"
log = "0.4"
self_encryption = "0.34.0"
tokio = "1.45"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1.88"
